--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,10 @@ verify_ssl = true
 [packages]
 ccxt = "==1.57.43"
 pandas = "*"
-six = "*"
 joblib = "*"
+black = "==21.12b0"
+flake8 = "==4.0.1"
+mypy = "==0.920"
 
 [requires]
 python_version = "3.6"
